# ares_simlulation_rc

./: LICENSE  README.md  letsgo.sh
rc_cartographer/: CMakeLists.txt  package.xml
rc_cartographer/config/: rc_lds_2d.lua
rc_cartographer/launch/: cartographer.launch.py  occupancy_grid.launch.py
rc_map/: CMakeLists.txt  package.xml
rc_map/launch/: rc_simulation.launch.py
rc_map/meshes/rc_world/: model.config  model.sdf
rc_map/meshes/rc_world/meshes/: world_original.dae
rc_map/rviz/: segmemtation_ground.rviz
rc_map/urdf/: test.xacro  waking_robot.xacro
rc_map/world/rc_world/: outdate.world  outdate02.world  outdate03.world  rc  rc_world.world
