<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rc_map</name>
  <version>0.0.0</version>
  <description>
    Gazebo simulation for RC2024 ARES
  </description>
  <maintainer email="weisonweileen@gmail.com">root</maintainer>
  <license>TODO: License declaration</license>
  <author email="weisonweileen@gmail.com">root</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>gazebo_ros_pkgs</depend>

  <build_depend>launch_ros</build_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/meshes"/>
    <!-- <gazebo_ros gazebo_model_path="${prefix}/urdf"/> -->

  </export>
</package>
